# webslab

./: .gitignore  Cargo.toml  LICENSE  README.md  README_WAYLAND.md  config.toml
.github/workflows/: release.yml
assets/: index.html
src/: adblocker.rs  config.rs  icon.rs  main.rs
