[package]
name = "webslab"
version = "0.1.0"
edition = "2021"
description = "A minimalist webview-based browser for tiling window managers."

[dependencies]
# Windowing and WebView
tao = "0.30"
wry = "0.47"
url = "2.5"

# Configuration and Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# Image handling for the window icon
image = "0.25"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.packager]
product_name = "webslab"
identifier = "com.yourname.webslab"
version = "0.1.0"
authors = ["duckd"]
description = "Minimalist tiling browser"
binaries = [
  { path = "webslab", main = true }
]

[package.metadata.packager.windows]

[package.metadata.packager.linux]