[package]
name = "webslab"
version = "0.1.0"
edition = "2021"
description = "A minimalist webview-based browser for tiling window managers."

[dependencies]
wry = "0.54.1"
tao = "0.31"
dirs = "5.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = "0.25"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.packager]
product_name = "webslab"
identifier = "com.sathvikd.webslab"
version = "0.1.0"
authors = ["sathvikd"]
description = "Minimalist tiling browser"
binaries = [
  { path = "webslab", main = true }
]

[package.metadata.packager.windows]

[package.metadata.packager.linux]